HISTORY titrationSimulator

test
- Mac OS 13.6: Octave 9.2.0 - Qt (latest)   easyMode 1 OK
                                            easyMode 2 OK
                                            easyMode 3 OK
  Windows 10:  Octave 

v19 Nov 2024  -- after feedback Ecem Arpi
- fixed several typos
- added titration progress bar
- added visual distinction of steps and questions
- fix CSP evaluation to also require correct peak picking
- added actual CSP vectors
- several textual clarifications
- added 25% points for correct answer on retry
- improved instructions after restarting from backup
- all questions better integrated (also calcCSP and getKD)
- tweaked evaluation of exchange regimes
- fixed type in questionCSP to calculate expected CSPs

test
 - MacOS 13.6: Octave 9.2.0 - Qt (latest)          easyMode 1 OK
 - windows 10: Octave 8.4.0 - Qt                   easyMode 2 OK
        (rotating plot is very slow)
        (PDF output indeed ugly)

v18 Sep 12/13 2024 --- after BMSB course:
- new checkFinished.m command to check progress DONE
- moved update of concentrations and exchange matrix to titrate.m, fix lConc error DONE
- fixed long color names if more titration points than colors DONE
- fixed copy-paste mistake in getKD  DONE
- save backup of program state before examining 2D FID and before starting calcCSP DONE
- make sure restarting from backup is smooth DONE
- streamline instructions further, especially at end when students are getting tired (of it) IN PROGRESS
- double-check prompt to start a new sample DONE
- maybe prompt student if taking really many points > 20 DONE
- update ligand question if ligand is another protein DONE
- prompt students to take notes DONE
- removed clc commands to allow to scroll back at all times DONE
- added comment segmental labeling DONE
- check loop of adjusting concentrations DONE
- added check for empty spectrum before continuing w/ titrate DONE
- students skip question 7 a lot - fixed prompt  DONE