@@ -19,7 +19,7 @@ elseif sum(questionAsked) < numQuestions && pb >= 0.7
     disp("Type \"question(x)\" at the prompt to still answer it,")
     disp("with x being the number of the question!")
     disp("")
-    disp("After answeringn the question type \"checkFinished\"")
+    disp("After answering the question type \"checkFinished\"")
     disp("")
 else
     % all question answered
